blue-green/blue-green-demo-route-staged-v2.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: blue-green-demo # Route name is unchanged, since we're updating an existing Route
  namespace: default
spec:
  traffic:
  - revisionName: blue-green-demo-00001
    percent: 100 # All traffic still going to the first revision
  - revisionName: blue-green-demo-00002
    percent: 0 # 0% of traffic routed to the second revision
    name: v2 # A named route
